--- a/package.json
+++ b/package.json
@@ -3,37 +3,36 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "build": "next build",
     "dev": "next dev",
-    "lint": "next lint",
-    "start": "next start"
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "@radix-ui/react-dialog": "1.0.5",
-    "@radix-ui/react-dropdown-menu": "2.0.6",
-    "@radix-ui/react-label": "2.0.2",
-    "@radix-ui/react-scroll-area": "1.0.4",
+    "next": "14.2.5",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "class-variance-authority": "0.7.0",
+    "clsx": "2.1.1",
+    "lucide-react": "0.395.0",
+    "tailwind-merge": "2.3.0",
+    "tailwindcss-animate": "1.0.7",
     "@radix-ui/react-slot": "1.0.3",
-    "@supabase/supabase-js": "latest",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "converse.js": "latest",
-    "lucide-react": "^0.454.0",
-    "next": "14.2.16",
-    "react": "^18",
-    "react-dom": "^18",
-    "tailwind-merge": "^2.5.5",
-    "tailwindcss-animate": "^1.0.7"
+    "@radix-ui/react-scroll-area": "1.0.4",
+    "@radix-ui/react-label": "2.0.2",
+    "@radix-ui/react-dropdown-menu": "2.0.6",
+    "@radix-ui/react-dialog": "1.0.5",
+    "@supabase/supabase-js": "2.45.4"
   },
   "devDependencies": {
-    "@types/node": "^22",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "10.4.19",
+    "@types/node": "20.14.10",
+    "@types/react": "18.3.3",
+    "@types/react-dom": "18.3.0",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.5",
-    "postcss": "^8.5",
+    "typescript": "5.5.3",
     "tailwindcss": "3.4.4",
-    "typescript": "^5"
+    "autoprefixer": "10.4.19",
+    "postcss": "8.4.39"
   }
 }
